// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencySelectorItem renders a currency selector item 1`] = `
<button
  class="tc__btn tc__currency-input__currency-selector-item "
  data-selected="false"
  type="button"
>
  <span
    class="tc__currency-input__currency-selector-item-content"
  >
    <svg
      class="tc__logo tc__logo-token-ETH"
      fill="none"
      height="40"
      viewBox="0 0 40 40"
      width="40"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 40C31.0457 40 40 31.0457 40 20C40 8.9543 31.0457 0 20 0C8.9543 0 0 8.9543 0 20C0 31.0457 8.9543 40 20 40Z"
        fill="#627EEA"
      />
      <path
        clip-rule="evenodd"
        d="M11.25 20.275L20.6225 5V16.0875L11.25 20.275ZM20.6225 27.4588V34.9938L11.25 22.0201L20.6225 27.4588Z"
        fill="white"
        fill-rule="evenodd"
      />
      <path
        d="M20.625 25.7163L29.9962 20.275L20.625 16.09V25.7163Z"
        fill="white"
        fill-opacity="0.2"
      />
      <path
        clip-rule="evenodd"
        d="M20.625 5V16.0875L29.9962 20.275L20.625 5ZM20.625 27.4573V34.991L30.0025 22.0173L20.625 27.4573ZM20.6225 25.7163L11.25 20.275L20.6225 16.09V25.7163Z"
        fill="white"
        fill-opacity="0.6"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="tc__currency-input__currency-selector-item-label"
      style="font-style: normal; font-size: 16px; line-height: 24px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'DM Sans', sans-serif; opacity: 1;"
    >
      ETH
    </div>
  </span>
</button>
`;

exports[`CurrencySelectorItem renders a currency selector item 2`] = `
<div
  class="tc__currency-input__currency-selector-item-label"
  style="font-style: normal; font-size: 16px; line-height: 24px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'DM Sans', sans-serif; opacity: 1;"
>
  ETH
</div>
`;

exports[`CurrencySelectorItem renders a disabled currency selector item 1`] = `
<button
  class="tc__btn tc__currency-input__currency-selector-item tc__currency-input__currency-selector-item-disabled"
  data-selected="false"
  disabled=""
  type="button"
>
  <span
    class="tc__currency-input__currency-selector-item-content"
  >
    <svg
      class="tc__logo tc__logo-token-ETH"
      fill="none"
      height="40"
      viewBox="0 0 40 40"
      width="40"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 40C31.0457 40 40 31.0457 40 20C40 8.9543 31.0457 0 20 0C8.9543 0 0 8.9543 0 20C0 31.0457 8.9543 40 20 40Z"
        fill="#627EEA"
      />
      <path
        clip-rule="evenodd"
        d="M11.25 20.275L20.6225 5V16.0875L11.25 20.275ZM20.6225 27.4588V34.9938L11.25 22.0201L20.6225 27.4588Z"
        fill="white"
        fill-rule="evenodd"
      />
      <path
        d="M20.625 25.7163L29.9962 20.275L20.625 16.09V25.7163Z"
        fill="white"
        fill-opacity="0.2"
      />
      <path
        clip-rule="evenodd"
        d="M20.625 5V16.0875L29.9962 20.275L20.625 5ZM20.625 27.4573V34.991L30.0025 22.0173L20.625 27.4573ZM20.6225 25.7163L11.25 20.275L20.6225 16.09V25.7163Z"
        fill="white"
        fill-opacity="0.6"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="tc__currency-input__currency-selector-item-label"
      style="font-style: normal; font-size: 16px; line-height: 24px; color: rgb(122, 122, 122); font-weight: 500; font-family: 'DM Sans', sans-serif; opacity: 1;"
    >
      ETH
    </div>
  </span>
</button>
`;
